# Gazebo_UAV

./: .gitignore  README.md  Simulador  Super_simulador.py
..bfg-report/2024-10-08/11-51-24/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2024-10-08/11-51-24/protected-dirt/: f4d7e5dd-HEAD.csv
controle/euler_drone_pkgs/: CMakeLists.txt  Control.py  package.xml
controle/euler_drone_pkgs/include/euler_helices_v2/: PropellerPlugin.h
controle/euler_drone_pkgs/include/euler_plugins/: euler_aero_plugin.h  euler_ardupilot.h  euler_batt_plugin.h  euler_mot_plugin.h  euler_mot_plugin_v2.h  gazebo_wind_plugin.h  rw_batt_plugin.h
controle/euler_drone_pkgs/launch/: propeller_test.launch
controle/euler_drone_pkgs/src/: PropellerPlugin.cpp  euler_aero_plugin.cpp  euler_ardupilot.cpp  euler_batt_plugin.cpp  euler_mot_plugin.cpp  euler_mot_plugin_v2.cpp  fluid_resitance.cpp  gazebo_wind_plugin.cpp  rw_bat_plugin.cpp
controle/euler_drone_pkgs/src/scripts/: Batt_sender.py  Crash_fei.xlsx  MAVLink_sender.py  Mission_sender.py  Plot.py  dados-simulador.csv  modelo_brushless_transiente.py
controle/euler_drone_pkgs/src/scripts/Dados/field_16ha_100ha_2%_0m_0_TSP/: field_16ha_100ha_0m_2%_0_cdt_unified.json  mission.csv
controle/euler_drone_pkgs/worlds/: propeller_test.sdf
simulacao/: CMakeLists.txt  package.xml
simulacao/launch/: EASy.launch  T30 _3x.launch  T30.launch  Teste_motor.launch  simulacao.launch
simulacao/models/EASy/: macros.xacro  materials.xacro  model.config  model.sdf  model.urdf  parametros.xacro  visualiza_vento.py
simulacao/models/EASy/Copter/: mav.param  mav.parm  mav.tlog  mav.tlog.raw
simulacao/models/EASy_estavel/: easy.xacro  plugins.gazebo
simulacao/models/EASy_estavel/Copter/: mav.parm
simulacao/models/MN801S-150KV-APC2015-SAMA-FW25/: model.config  model.sdf
simulacao/models/T30/: model.config  model.sdf
simulacao/models/T30/Copter/: mav.param  mav.parm  mav.tlog  mav.tlog.raw  mav2.parm  parametro.parm  way.txt
simulacao/models/T30_barra/: model.config  model.sdf
simulacao/models/T30_barra/Copter/: mav.parm  mav.tlog  mav.tlog.raw  way.txt
simulacao/models/T30_estavel/: model.config  model.sdf
simulacao/models/T30_estavel/Copter/: mav.parm  mav.tlog  mav.tlog.raw  way.txt
simulacao/models/T30_inercia/: model.config  model.sdf
simulacao/models/T30_inercia_barra/: model.config  model.sdf
simulacao/models/easy_with_ardupilot/: model.config  model.sdf
simulacao/models/easy_with_standoffs/: model.config  model.sdf
simulacao/params/: battery_config.yaml  helices.yaml
simulacao/worlds/: DJI_T30.world  EASy.world  README.md  TestBench.world  mundo_vazio.world  pista_vazia.world
utilidades/: Comandos uteis.txt  Simulador  frsky_x18.yaml  plugin_template.cpp  plugin_template.h  requirements.txt  sony_PS5.yaml
