<?xml version="1.0"?>
<package>
	<name>simulacao</name>
	<version>1.0.2</version>
	<description>O ambiente de simulacao para o drone EASy em gazebo com ardupilot, MARVROS e ROS</description>
	<maintainer email="eulertorres@outlook.com">Euler</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>gazebo_ros</buildtool_depend>

	<build_depend>gazebo_ros</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>gazebo_ros</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
	</export>
	
</package>