<?xml version="1.0"?>
<package format="2">
  <name>euler_aerodinamica_v1</name>
  <version>0.0.2</version>
  <description>The euler_aerodinamica package</description>

  <maintainer email="euler.feitosa@xmobots.com">Euler Torres</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
