<?xml version="1.0"?>
<package format="2">
  <name>euler_aerodinamica_v1</name>
  <version>0.0.1</version>
  <description>Pacote contendo plugins de aerodinâmica e bateria.</description>

  <maintainer email="euler.feitosa@xmobots.com">Euler Torres</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>gazebo_ros</build_depend> 

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
